@@ -53,6 +53,7 @@ MODULE
     transformName = text
     bottomLeftX = 7
     bottomLeftY = 4
+    useBoundingBox = true
     width = 498
     height = 98
     offsetX = 8
